cloud-native/kubernetes/manifestations/namespace-01.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zeus-api-prod
  labels:
    app: zeus-api
    environment: production
